--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <h1>😴 Server Sleeping</h1>
     <p>
-      Our backend server is currently powered down to save energy and cost.<br />
+      Our server is currently powered down to save energy and cost.<br />
       It will wake up soon — please check back later.
     </p>
     <div class="footer">© 2025 Devert.xyz</div>
